chore: update local `axelar-chains-config` and `axelar-gmp-sdk-solidity`

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@axelar-network/axelar-cgp-solidity": "6.2.1",
-    "@axelar-network/axelar-gmp-sdk-solidity": "5.6.4"
+    "@axelar-network/axelar-gmp-sdk-solidity": "file:../axelar-gmp-sdk-solidity"
   },
   "devDependencies": {
-    "@axelar-network/axelar-chains-config": "^1.2.0",
+    "@axelar-network/axelar-chains-config": "file:../axelar-contract-deployments/axelar-chains-config",
     "@axelarjs/evm": "^0.2.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@tsconfig/strictest": "^2.0.2",
